# wevol

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  test.c  test_data.h
lib/: evt.c  evtx.c  levtx.c  levtx.h  winlog.c
src/: CMakeLists.txt  evt.h  evtx.c  evtx.h  main.c  winlog.c  winlog.h
tests/: CMakeLists.txt  check_assertions.h  check_evt.c  check_evtx.c  check_main.c  check_main.h  check_winlog.c  evtx_test_data.h  test_data.h
